# Project_goit

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  fly.toml  index,html  main.py  pyproject.toml  requirements.txt
PhotoShare/conf/: config.py
PhotoShare/database/: db.py  models.py
PhotoShare/repository/: comments.py  photos.py  transformations.py  users.py
PhotoShare/routes/: auth.py  comments.py  photos.py
PhotoShare/schemas/: comment.py  photo.py  transform.py  user.py
PhotoShare/services/: auth.py  cloudinary_service.py  roles.py
PhotoShare/tests/: conftest.py  test_auth_service.py  test_comment_repository.py  test_photos_repository.py  test_repository.py  test_roles.py
alembic/: env.py
alembic/versions/: 6ebff367220e_init_tables.py
